// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expenses Summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling
    <NumberFormat
      allowEmptyFormatting={false}
      allowNegative={true}
      decimalSeparator="."
      displayType="text"
      fixedDecimalScale={false}
      getInputRef={[Function]}
      isAllowed={[Function]}
      isNumericString={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      onValueChange={[Function]}
      prefix="₹"
      suffix=""
      thousandSeparator={true}
      thousandsGroupStyle="lakh"
      type="text"
    />
  </h1>
</div>
`;

exports[`Should correctly render expenses Summary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    22
     
    expenses
     totalling
    <NumberFormat
      allowEmptyFormatting={false}
      allowNegative={true}
      decimalSeparator="."
      displayType="text"
      fixedDecimalScale={false}
      getInputRef={[Function]}
      isAllowed={[Function]}
      isNumericString={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      onValueChange={[Function]}
      prefix="₹"
      suffix=""
      thousandSeparator={true}
      thousandsGroupStyle="lakh"
      type="text"
    />
  </h1>
</div>
`;
